--- a/app/src/main/res/layout-land/fragment_settings.xml
+++ b/app/src/main/res/layout-land/fragment_settings.xml
@@ -895,13 +895,13 @@
                 android:orientation="horizontal">
 
                 <TextView
-                    android:id="@+id/twitter"
+                    android:id="@+id/developer"
                     style="@style/TextSmall"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginHorizontal="8dp"
                     android:padding="10dp"
-                    android:text="@string/twitter" />
+                    android:text="@string/developer" />
 
                 <TextView
                     android:id="@+id/share"
