--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -913,14 +913,14 @@
                 android:orientation="horizontal">
 
                 <TextView
-                    android:id="@+id/twitter"
+                    android:id="@+id/developer"
                     style="@style/TextSmall"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:ellipsize="end"
                     android:maxLines="1"
                     android:padding="10dp"
-                    android:text="@string/twitter" />
+                    android:text="@string/developer" />
 
                 <TextView
                     android:id="@+id/share"
