--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -77,7 +77,7 @@
                 android:layout_marginTop="20dp"
                 android:lineSpacingExtra="2dp"
                 android:textColor="?attr/primaryColor"
-                tools:text="@string/rate_us_message" />
+                tools:text="" />
 
             <TextView
                 android:id="@+id/tvAction"
